--- a/media-radio/fldigi/ChangeLog
+++ b/media-radio/fldigi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-radio/fldigi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.55 2012/09/22 09:59:47 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.56 2012/10/04 07:10:07 tomjbe Exp $
+
+*fldigi-3.21.53 (04 Oct 2012)
+
+  04 Oct 2012; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.51.ebuild,
+  +fldigi-3.21.53.ebuild:
+  Maintenance release. Remove buggy 3.21.51
 
   22 Sep 2012; Markos Chandras <hwoarang@gentoo.org> fldigi-3.21.50.ebuild:
   Stable on amd64 wrt bug #435734
