--- a/app-editors/ghex/ChangeLog
+++ b/app-editors/ghex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/ghex
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/ghex/ChangeLog,v 1.72 2012/09/04 04:30:27 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/ghex/ChangeLog,v 1.73 2012/10/04 07:37:45 phajdan.jr Exp $
+
+  04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ghex-3.4.1.ebuild:
+  x86 stable wrt bug #427544
 
   04 Sep 2012; Mart Raudsepp <leio@gentoo.org> -ghex-2.24.0.ebuild:
   Remove old
