--- a/app-admin/genromfs/ChangeLog
+++ b/app-admin/genromfs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/genromfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/genromfs/ChangeLog,v 1.18 2012/10/03 18:08:30 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/genromfs/ChangeLog,v 1.19 2012/10/04 07:46:22 kensington Exp $
+
+  04 Oct 2012; Michael Palimaka <kensington@gentoo.org>
+  -files/genromfs-0.5.1-build.patch, -genromfs-0.5.1.ebuild:
+  Remove old.
 
   03 Oct 2012; Brent Baude <ranger@gentoo.org> genromfs-0.5.2.ebuild:
   Marking genromfs-0.5.2 ppc for bug 431634
