--- a/app-text/qpdf/ChangeLog
+++ b/app-text/qpdf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/qpdf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/qpdf/ChangeLog,v 1.14 2012/09/21 09:27:09 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/qpdf/ChangeLog,v 1.15 2012/10/04 08:08:53 naota Exp $
+
+  04 Oct 2012;  <naota@gentoo.org> qpdf-3.0.2.ebuild:
+  Add ~x86-fbsd wrt bug #428356
 
   21 Sep 2012; Anthony G. Basile <blueness@gentoo.org> qpdf-3.0.1.ebuild,
   qpdf-3.0.2.ebuild:
@@ -59,4 +62,3 @@
   20 Dec 2011; Tim Harder <radhermit@gentoo.org> +qpdf-2.3.0.ebuild,
   +metadata.xml:
   Initial import (bug #394651). Ebuild by me.
-
