--- a/media-libs/mesa/ChangeLog
+++ b/media-libs/mesa/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.425 2012/09/24 18:14:04 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.426 2012/10/04 08:37:19 naota Exp $
+
+  04 Oct 2012;  <naota@gentoo.org> +files/mesa-8.0.4-configure-bsd.patch,
+  mesa-8.0.3-r1.ebuild, mesa-8.0.3.ebuild, mesa-8.0.4-r1.ebuild,
+  mesa-8.0.4.ebuild, mesa-8.1_rc1_pre20120724.ebuild,
+  mesa-8.1_rc1_pre20120814.ebuild:
+  Add patch to fix non-POSIX test. #435496
 
   24 Sep 2012; Raúl Porcel <armin76@gentoo.org> mesa-8.0.4-r1.ebuild:
   alpha/ia64/sh/sparc stable wrt #432400
