--- a/sci-astronomy/stellarium/ChangeLog
+++ b/sci-astronomy/stellarium/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-astronomy/stellarium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/stellarium/ChangeLog,v 1.104 2012/10/04 04:55:02 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/stellarium/ChangeLog,v 1.105 2012/10/04 10:27:57 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> stellarium-0.11.4a.ebuild:
+  Stable for amd64, wrt bug #436810
 
   04 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org>
   stellarium-0.11.4a.ebuild:
