--- a/dev-lang/swi-prolog/ChangeLog
+++ b/dev-lang/swi-prolog/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.349 2012/09/30 16:29:03 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.350 2012/10/04 10:29:24 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> swi-prolog-6.2.0.ebuild:
+  Stable for amd64, wrt bug #437094
 
   30 Sep 2012; <keri@gentoo.org> swi-prolog-6.2.0.ebuild,
   swi-prolog-6.2.1.ebuild, swi-prolog-6.3.1.ebuild:
