--- a/dev-libs/libffi/ChangeLog
+++ b/dev-libs/libffi/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for dev-libs/libffi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.155 2012/10/04 06:46:50 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.156 2012/10/04 11:12:07 ssuominen Exp $
 
   04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> libffi-3.0.11.ebuild:
   Check if ${ROOT} is / or not before executing the -lffi sanity link check wrt
-  #437046
+  #437046 by Alexander Tsoy
 
   02 Oct 2012; Fabian Groffen <grobian@gentoo.org> libffi-3.0.11.ebuild:
   Fix non-fatal typo effectively disabling the link-check
