--- a/x11-themes/gtk-engines-xfce/ChangeLog
+++ b/x11-themes/gtk-engines-xfce/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.155 2012/09/05 11:12:58 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.156 2012/10/04 11:33:13 ssuominen Exp $
+
+*gtk-engines-xfce-3.0.1-r300 (04 Oct 2012)
+*gtk-engines-xfce-3.0.1-r200 (04 Oct 2012)
+
+  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +gtk-engines-xfce-3.0.1-r200.ebuild, +gtk-engines-xfce-3.0.1-r300.ebuild:
+  Version bump.
 
 *gtk-engines-xfce-3.0.0-r201 (05 Sep 2012)
 
