--- a/net-dns/dnsmasq/ChangeLog
+++ b/net-dns/dnsmasq/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/dnsmasq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.226 2012/10/04 11:32:11 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.227 2012/10/04 11:48:06 blueness Exp $
+
+  04 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dnsmasq-2.63.ebuild:
+  stable arm, bug #436894
 
   04 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dnsmasq-2.63.ebuild:
   stable ppc ppc64, bug #436894
