--- a/sys-apps/pkgcore/ChangeLog
+++ b/sys-apps/pkgcore/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pkgcore
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.158 2012/10/01 08:42:08 ferringb Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.159 2012/10/04 13:42:06 ferringb Exp $
+
+*pkgcore-0.8.3 (04 Oct 2012)
+
+  04 Oct 2012; Brian Harring <ferringb@gentoo.org> -pkgcore-0.8.2.ebuild,
+  +pkgcore-0.8.3.ebuild:
+  Pull in fix for corner case involving default phases.
 
 *pkgcore-0.8.2 (01 Oct 2012)
 
