--- a/net-wireless/wpa_supplicant/ChangeLog
+++ b/net-wireless/wpa_supplicant/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/wpa_supplicant
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.183 2012/10/03 19:22:03 gurligebis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.184 2012/10/04 13:47:35 gurligebis Exp $
+
+*wpa_supplicant-1.0-r1 (04 Oct 2012)
+
+  04 Oct 2012; <gurligebis@gentoo.org> +wpa_supplicant-1.0-r1.ebuild,
+  +files/wpa_supplicant-1.0-libnl_path_fix.patch:
+  Moving to depend on dev-libs/libnl:3 instead of dev-libs/libnl:1.1
 
   03 Oct 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0.ebuild:
   Migrated to REQUIRED_USE, fixing bug #436824
