--- a/app-vim/tt2-syntax/ChangeLog
+++ b/app-vim/tt2-syntax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/tt2-syntax
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/tt2-syntax/ChangeLog,v 1.11 2012/09/30 18:21:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/tt2-syntax/ChangeLog,v 1.12 2012/10/04 13:51:24 blueness Exp $
+
+  04 Oct 2012; Anthony G. Basile <blueness@gentoo.org> tt2-syntax-1.13.ebuild:
+  stable ppc64, bug #412953
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> tt2-syntax-1.13.ebuild:
   Drop alpha keywords
@@ -37,4 +40,3 @@
   06 Sep 2007; Ali Polatel <hawking@gentoo.org> +metadata.xml,
   +tt2-syntax-1.13.ebuild:
   Initial commit.
-
