--- a/app-editors/gphpedit/ChangeLog
+++ b/app-editors/gphpedit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gphpedit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gphpedit/ChangeLog,v 1.26 2012/10/03 10:24:38 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gphpedit/ChangeLog,v 1.27 2012/10/04 14:44:48 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gphpedit-0.9.98_rc1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gphpedit-0.9.98_rc1.ebuild:
