--- a/app-editors/latexila/ChangeLog
+++ b/app-editors/latexila/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/latexila
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/latexila/ChangeLog,v 1.10 2012/10/03 10:25:18 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/latexila/ChangeLog,v 1.11 2012/10/04 14:44:57 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> latexila-2.4.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> latexila-2.4.1.ebuild:
   x86 stable wrt bug #427544
