--- a/app-office/gtimelog/ChangeLog
+++ b/app-office/gtimelog/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/gtimelog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/gtimelog/ChangeLog,v 1.6 2012/10/03 10:28:42 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/gtimelog/ChangeLog,v 1.7 2012/10/04 14:45:59 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gtimelog-0.7.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gtimelog-0.7.1.ebuild:
   x86 stable wrt bug #427544
