--- a/app-text/yelp-tools/ChangeLog
+++ b/app-text/yelp-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/yelp-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/yelp-tools/ChangeLog,v 1.7 2012/10/03 10:29:44 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/yelp-tools/ChangeLog,v 1.8 2012/10/04 14:46:24 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> yelp-tools-3.4.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yelp-tools-3.4.1.ebuild:
   x86 stable wrt bug #427544
