--- a/dev-util/anjuta/ChangeLog
+++ b/dev-util/anjuta/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/anjuta
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/anjuta/ChangeLog,v 1.147 2012/10/03 10:56:50 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/anjuta/ChangeLog,v 1.148 2012/10/04 14:50:17 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> anjuta-3.4.3.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> anjuta-3.4.3.ebuild:
   x86 stable wrt bug #427544
