--- a/dev-util/devhelp/ChangeLog
+++ b/dev-util/devhelp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/devhelp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/devhelp/ChangeLog,v 1.138 2012/10/03 10:57:33 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/devhelp/ChangeLog,v 1.139 2012/10/04 14:50:32 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> devhelp-3.4.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> devhelp-3.4.1.ebuild:
   x86 stable wrt bug #427544
