--- a/dev-util/gdbus-codegen/ChangeLog
+++ b/dev-util/gdbus-codegen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/gdbus-codegen
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gdbus-codegen/ChangeLog,v 1.33 2012/10/03 23:59:49 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gdbus-codegen/ChangeLog,v 1.34 2012/10/04 14:50:48 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gdbus-codegen-2.32.4.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gdbus-codegen-2.32.4.ebuild, gdbus-codegen-2.34.0.ebuild:
