--- a/dev-util/glade/ChangeLog
+++ b/dev-util/glade/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/glade
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.169 2012/10/04 07:39:15 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/glade/ChangeLog,v 1.170 2012/10/04 14:51:06 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> glade-3.12.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> glade-3.12.1.ebuild:
   x86 stable wrt bug #427544
