--- a/dev-util/itstool/ChangeLog
+++ b/dev-util/itstool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/itstool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/itstool/ChangeLog,v 1.14 2012/10/03 11:40:09 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/itstool/ChangeLog,v 1.15 2012/10/04 14:51:33 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> itstool-1.2.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> itstool-1.2.0.ebuild:
   x86 stable wrt bug #427544
