--- a/dev-util/meld/ChangeLog
+++ b/dev-util/meld/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/meld
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.146 2012/10/03 11:40:32 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.147 2012/10/04 14:51:49 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> meld-1.6.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> meld-1.6.0.ebuild:
   x86 stable wrt bug #427544
