--- a/gnome-base/dconf/ChangeLog
+++ b/gnome-base/dconf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/dconf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/dconf/ChangeLog,v 1.35 2012/10/03 11:40:54 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/dconf/ChangeLog,v 1.36 2012/10/04 14:52:05 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dconf-0.12.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> dconf-0.12.1.ebuild:
   x86 stable wrt bug #427544
