--- a/gnome-base/gsettings-desktop-schemas/ChangeLog
+++ b/gnome-base/gsettings-desktop-schemas/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gsettings-desktop-schemas
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gsettings-desktop-schemas/ChangeLog,v 1.35 2012/10/03 11:42:10 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gsettings-desktop-schemas/ChangeLog,v 1.36 2012/10/04 14:52:42 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  gsettings-desktop-schemas-3.4.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gsettings-desktop-schemas-3.4.2.ebuild:
