--- a/gnome-base/libgdu/ChangeLog
+++ b/gnome-base/libgdu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgdu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgdu/ChangeLog,v 1.5 2012/10/03 15:19:52 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgdu/ChangeLog,v 1.6 2012/10/04 14:53:17 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libgdu-3.0.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libgdu-3.0.2.ebuild:
   x86 stable wrt bug #427544
