--- a/gnome-extra/gnome-dvb-daemon/ChangeLog
+++ b/gnome-extra/gnome-dvb-daemon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-dvb-daemon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-dvb-daemon/ChangeLog,v 1.14 2012/07/06 21:15:24 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-dvb-daemon/ChangeLog,v 1.15 2012/10/04 14:53:46 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gnome-dvb-daemon-0.2.9.ebuild:
+  Stable for amd64, wrt bug #427544
 
 *gnome-dvb-daemon-0.2.9 (06 Jul 2012)
 
