--- a/gnome-extra/gnome-web-photo/ChangeLog
+++ b/gnome-extra/gnome-web-photo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-web-photo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-web-photo/ChangeLog,v 1.24 2012/10/03 15:20:34 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-web-photo/ChangeLog,v 1.25 2012/10/04 14:53:55 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gnome-web-photo-0.10.6.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gnome-web-photo-0.10.6.ebuild:
