--- a/gnome-extra/libgsf/ChangeLog
+++ b/gnome-extra/libgsf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgsf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.204 2012/10/03 15:22:19 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.205 2012/10/04 14:55:06 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libgsf-1.14.23.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libgsf-1.14.23.ebuild:
   x86 stable wrt bug #427544
