--- a/gnome-extra/yelp-xsl/ChangeLog
+++ b/gnome-extra/yelp-xsl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/yelp-xsl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp-xsl/ChangeLog,v 1.8 2012/10/03 15:22:34 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp-xsl/ChangeLog,v 1.9 2012/10/04 14:55:15 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> yelp-xsl-3.4.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yelp-xsl-3.4.2.ebuild:
   x86 stable wrt bug #427544
