--- a/mail-client/balsa/ChangeLog
+++ b/mail-client/balsa/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/balsa
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/balsa/ChangeLog,v 1.117 2012/10/03 15:22:56 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/balsa/ChangeLog,v 1.118 2012/10/04 14:55:30 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> balsa-2.4.12.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> balsa-2.4.12.ebuild:
   x86 stable wrt bug #427544
