--- a/media-fonts/cantarell/ChangeLog
+++ b/media-fonts/cantarell/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/cantarell
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/cantarell/ChangeLog,v 1.21 2012/10/03 15:23:16 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/cantarell/ChangeLog,v 1.22 2012/10/04 14:55:45 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> cantarell-0.0.9.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> cantarell-0.0.9.ebuild:
   x86 stable wrt bug #427544
