--- a/media-gfx/gphoto2/ChangeLog
+++ b/media-gfx/gphoto2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gphoto2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gphoto2/ChangeLog,v 1.125 2012/10/03 15:23:32 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gphoto2/ChangeLog,v 1.126 2012/10/04 14:56:00 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gphoto2-2.4.14.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gphoto2-2.4.14.ebuild:
   x86 stable wrt bug #427544
