--- a/media-gfx/gthumb/ChangeLog
+++ b/media-gfx/gthumb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gthumb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.153 2012/10/03 15:24:09 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.154 2012/10/04 14:56:14 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gthumb-2.14.4.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gthumb-2.14.4.ebuild:
   x86 stable wrt bug #427544
