--- a/media-gfx/simple-scan/ChangeLog
+++ b/media-gfx/simple-scan/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/simple-scan
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/simple-scan/ChangeLog,v 1.18 2012/10/03 15:24:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/simple-scan/ChangeLog,v 1.19 2012/10/04 14:56:23 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> simple-scan-3.4.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   simple-scan-3.4.2.ebuild:
