--- a/media-gfx/graphicsmagick/ChangeLog
+++ b/media-gfx/graphicsmagick/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/graphicsmagick
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.105 2012/08/19 14:25:44 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.106 2012/10/04 14:57:07 ssuominen Exp $
+
+  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  graphicsmagick-1.3.16-r1.ebuild:
+  ppc/ppc64 stable wrt #428718
 
   19 Aug 2012; Raúl Porcel <armin76@gentoo.org>
   graphicsmagick-1.3.16-r1.ebuild:
