--- a/media-plugins/grilo-plugins/ChangeLog
+++ b/media-plugins/grilo-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/grilo-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.11 2012/10/03 15:25:38 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.12 2012/10/04 14:57:16 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> grilo-plugins-0.1.18.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   grilo-plugins-0.1.18.ebuild:
