--- a/net-dialup/moserial/ChangeLog
+++ b/net-dialup/moserial/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/moserial
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/moserial/ChangeLog,v 1.21 2012/10/03 15:26:01 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/moserial/ChangeLog,v 1.22 2012/10/04 14:57:41 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> moserial-3.0.7.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> moserial-3.0.7.ebuild:
   x86 stable wrt bug #427544
