--- a/net-im/gajim/ChangeLog
+++ b/net-im/gajim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.152 2012/10/03 15:38:59 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.153 2012/10/04 14:57:58 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gajim-0.15.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gajim-0.15.1.ebuild:
   x86 stable wrt bug #427544
