--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.40 2012/10/03 15:39:13 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.41 2012/10/04 14:58:13 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-logger-0.4.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   telepathy-logger-0.4.0.ebuild:
