--- a/net-im/telepathy-mission-control/ChangeLog
+++ b/net-im/telepathy-mission-control/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/telepathy-mission-control
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.74 2012/10/03 15:39:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.75 2012/10/04 14:58:28 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  telepathy-mission-control-5.12.3.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   telepathy-mission-control-5.12.3.ebuild:
