--- a/media-gfx/graphicsmagick/ChangeLog
+++ b/media-gfx/graphicsmagick/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/graphicsmagick
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.106 2012/10/04 14:57:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.107 2012/10/04 14:59:10 ssuominen Exp $
+
+  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -graphicsmagick-1.3.13.ebuild,
+  -files/graphicsmagick-1.3.13-lzma_configure.patch:
+  old
 
   04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
   graphicsmagick-1.3.16-r1.ebuild:
