--- a/media-gfx/imagemagick/ChangeLog
+++ b/media-gfx/imagemagick/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.494 2012/10/04 14:56:57 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.495 2012/10/04 14:59:33 ssuominen Exp $
+
+  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -imagemagick-6.7.6.4.ebuild:
+  old
 
   04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
   imagemagick-6.7.8.7.ebuild:
